fixed accessibility gaps

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -59,7 +59,8 @@
   color: white;
   margin: 9px 0;
   border-radius: 5px;
-  background: #1db954;
+  /* Spotify Green */
+  background: #1DB954; 
   display: flex;
   flex-direction: row;
   align-items: center;
